objects/IncentiveData__c.object
<CustomObject>
    <fields>
        <fullName>CustomSalesAgreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom Sales Agreement</label>
        <referenceTo>CustomSalesAgreement__c</referenceTo>
        <relationshipLabel>Incentive Data</relationshipLabel>
        <relationshipName>Incentive_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ForecastTons__c</fullName>
        <label>Forecast Tons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Growth_Incentive__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Growth Incentive $/ST</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IndividualIncentive__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Individual Incentive $/ST</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PortfolioIncentives__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Portfolio Incentives $/ST</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Potential_Growth_Incentive__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Potential Growth Incentive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Individual_Incentive__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Potential Individual Incentive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Portfolio_Incentive__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Potential Portfolio Incentive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_SS_ProductFamilies</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Threshold__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Threshold</label>
        <type>TextArea</type>
    </fields>
    <label>Incentive Data</label>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>Incentive Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentive Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>